MqttPanelCraft/build_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:compileDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
D:\mqttgoogleplaypj\codetest\MqttPanelCraftV2\MqttPanelCraft\app\build\generated\data_binding_base_class_source_out\debug\out\com\example\mqttpanelcraft\databinding\ActivityProjectViewBinding.java:23: error: cannot find symbol
import com.example.mqttpanelcraft.ui.GridBackgroundView;
                                    ^
  symbol:   class GridBackgroundView
  location: package com.example.mqttpanelcraft.ui
D:\mqttgoogleplaypj\codetest\MqttPanelCraftV2\MqttPanelCraft\app\build\generated\data_binding_base_class_source_out\debug\out\com\example\mqttpanelcraft\databinding\ActivityProjectViewBinding.java:36: error: cannot find symbol
  public final GridBackgroundView backgroundGrid;
               ^
  symbol:   class GridBackgroundView
  location: class ActivityProjectViewBinding
D:\mqttgoogleplaypj\codetest\MqttPanelCraftV2\MqttPanelCraft\app\build\generated\data_binding_base_class_source_out\debug\out\com\example\mqttpanelcraft\databinding\ActivityProjectViewBinding.java:168: error: cannot find symbol
      @NonNull GridBackgroundView backgroundGrid, @NonNull FrameLayout bottomSheet,
               ^
  symbol:   class GridBackgroundView
  location: class ActivityProjectViewBinding
D:\mqttgoogleplaypj\codetest\MqttPanelCraftV2\MqttPanelCraft\app\build\generated\data_binding_base_class_source_out\debug\out\com\example\mqttpanelcraft\databinding\ActivityProjectViewBinding.java:263: error: cannot find symbol
      GridBackgroundView backgroundGrid = ViewBindings.findChildViewById(rootView, id);
      ^
  symbol:   class GridBackgroundView
  location: class ActivityProjectViewBinding
4 errors

[Incubating] Problems report is available at: file:///D:/mqttgoogleplaypj/codetest/MqttPanelCraftV2/MqttPanelCraft/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  D:\mqttgoogleplaypj\codetest\MqttPanelCraftV2\MqttPanelCraft\app\build\generated\data_binding_base_class_source_out\debug\out\com\example\mqttpanelcraft\databinding\ActivityProjectViewBinding.java:23: error: cannot find symbol
  import com.example.mqttpanelcraft.ui.GridBackgroundView;
                                      ^
    symbol:   class GridBackgroundView
    location: package com.example.mqttpanelcraft.ui
  D:\mqttgoogleplaypj\codetest\MqttPanelCraftV2\MqttPanelCraft\app\build\generated\data_binding_base_class_source_out\debug\out\com\example\mqttpanelcraft\databinding\ActivityProjectViewBinding.java:36: error: cannot find symbol
    public final GridBackgroundView backgroundGrid;
                 ^
    symbol:   class GridBackgroundView
    location: class ActivityProjectViewBinding
  D:\mqttgoogleplaypj\codetest\MqttPanelCraftV2\MqttPanelCraft\app\build\generated\data_binding_base_class_source_out\debug\out\com\example\mqttpanelcraft\databinding\ActivityProjectViewBinding.java:168: error: cannot find symbol
        @NonNull GridBackgroundView backgroundGrid, @NonNull FrameLayout bottomSheet,
                 ^
    symbol:   class GridBackgroundView
    location: class ActivityProjectViewBinding
  D:\mqttgoogleplaypj\codetest\MqttPanelCraftV2\MqttPanelCraft\app\build\generated\data_binding_base_class_source_out\debug\out\com\example\mqttpanelcraft\databinding\ActivityProjectViewBinding.java:263: error: cannot find symbol
        GridBackgroundView backgroundGrid = ViewBindings.findChildViewById(rootView, id);
        ^
    symbol:   class GridBackgroundView
    location: class ActivityProjectViewBinding
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 1s
20 actionable tasks: 1 executed, 19 up-to-date
